feat: implement new shortcuts for both linux and macos

--- a/kitty.conf
+++ b/kitty.conf
@@ -24,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 20.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -1540,6 +1540,7 @@ font_size 20.0
 #: better off just hiding the titlebar with hide_window_decorations.
 
 # macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1788,6 +1789,7 @@ font_size 20.0
 # map kitty_mod+k     scroll_line_up
 # map opt+cmd+page_up scroll_line_up
 # map cmd+up          scroll_line_up
+map kitty_mod+k scroll_line_up
 
 #: Scroll line down
 
@@ -1795,6 +1797,7 @@ font_size 20.0
 # map kitty_mod+j       scroll_line_down
 # map opt+cmd+page_down scroll_line_down
 # map cmd+down          scroll_line_down
+map kitty_mod+j scroll_line_down
 
 #: Scroll page up
 
@@ -2018,12 +2021,14 @@ map ctrl+shift+tab previous_window
 # map kitty_mod+right next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
+map alt+l next_tab
 
 #: Previous tab
 
 # map kitty_mod+left previous_tab
 # map shift+cmd+[    previous_tab
 # map ctrl+shift+tab previous_tab
+map alt+h previous_tab
 
 #: New tab
 
